gccida/g2/loop_iv_add_mult_hoist
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iv_add_mult_hoist/src/loop.c:8220:43: error: use of undeclared identifier 'machine_mode'
v10 = expand_mult_add( v9, reg, v8, v7, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iv_add_mult_hoist/src/obj/loop.o] Error 1
